Changes since CEXP-2.1
 2013/01/14:
 - libtecla/hash.c, libtecla/keytab.c: silenced compiler warnings
   by casting chars to ints when using ctype.h (isspace & friends).
 2013/01/09:
 - cexp.y, cexpsyms.c, ctyps.c, ctyps.h: preliminary support for
   'int' type. Missing pieces are marked with an /* INTFIX */ comment.
 2013/01/09:
 - Makefile.am: No need to link the demo statically. With the new
   shared library support the linux demo works actually better when
   linked dynamically.
 2013/01/09:
 - bfdstuff.c, elfsyms.c, cexp.c, cexp.h:
   !!!! API CHANGE of cexpSearchFile() !!!!
   (but this routine is probably not used outside of cexp itself).
   No longer use a char ** argument to pass a filename in and the
   resolved pathname out. This is ugly and creates conflicts when
   we qualify the filename arg 'const'. See cexp.h for the new
   semantics.
 - elfsyms.c, cexpmodP.h, cexpmod.c, cexp.c, cexp.h, bfdstuff.c:
   added 'const' to string arguments to
   cexpSlurpElf(), cexpLoadFile(), cexpModuleFindByName(),
   cexpModuleDumpGdbSectionInfo(), lkup(), cexpModuleLoad(),
   cexpModuleName().
 2013/01/09:
 - getopt/mygetopt_r.h, getopt/mygetopt_r.c: declare string argument
   'optstr' as 'const'.
 2012/12/03:
 - elfdlsyms.c: BUGFIX: must handle the case where both, HASH and GNU_HASH 
   are present. Code gave preference to HASH but later checked for GNU_HASH
   and used incomplete information (hhdr).
 2012/07/17:
 - ctyps.h, ctyps.c: introduced UInt type (not used yet). Use designated
   array initializers when building type converter matrix.
 - cexpsyms.c: BUGFIX - _cexp_addrcomp() cannot just return 'int'
   difference between pointers. Result is wrong for e.g.,
   (void *) 1 - (void*)(-1) or if pointers are larger than 'int'.
   We now do explicit pointer comparison.
 2012/07/16:
 - Makefile.am, configure.ac, elfsyms.c, elfdlsyms.c elfdlsyms.h:
   added support for adding dynamic symbols of all dependent shared